# gdpack

./: .codecov.yaml  .gitignore  .golangci.yml  .goreleaser.yaml  .release-please-config.json  .release-please-manifest.json  .release-please.json  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  go.mod  go.sum  manifest.json  tools.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: dependabot.yml
.github/actions/cargo-build/: action.yml
.github/actions/parse-rust-version/: action.yml
.github/actions/setup-gdpack/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-gdpack.yml  check-commit.yml  codeql.yml  merge-dependabot-pr.yml  release-please.yml  test-workflow.yml
cmd/gdpack/: add.go  init.go  install.go  main.go  patch.go  remove.go  replace.go  update.go  vendor.go
cmd/gdpack-test/: main.go
docs/: commands.md  installation.md
internal/git/: git.go
pkg/manifest/: dependency.go  file.go  manifest.go  option.go  parse.go  spec.go  write.go
scripts/: install.ps1  install.sh
src/: main.rs
src/addon/: addon.rs  dependency.rs  extension.rs  mod.rs  plugin.rs  spec.rs
src/addon/git/: mod.rs
src/cmd/: add.rs  dependency.rs  init.rs  install.rs  mod.rs  remove.rs  replace.rs  update.rs
src/config/: gdext.rs  manifest.rs  mod.rs  plugin.rs
src/config/manifest/: addon.rs  dependency.rs  key.rs  mod.rs  project.rs
src/core/: addon.rs  dependency.rs  hook.rs  install.rs  mod.rs  project.rs
src/git/: checkout.rs  database.rs  mod.rs  release.rs  remote.rs  repo.rs  source.rs  store.rs
src/manifest/: addon.rs  dependency.rs  key.rs  manifest.rs  mod.rs
src/store/: git.rs  mod.rs  path.rs  store.rs
